many logics (like delete order, create order, change order status etc) refactored in the product, inventory and order services